# Irongate

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  SECURITY_MODEL.md  THREAT_MODEL.md
.github/workflows/: publish.yml
sdk/: .env.example  pyproject.toml  pytest.ini
sdk/agentshield/: __init__.py  approvals.py  audit_hooks.py  capabilities.py  cli.py  dashboard.py  default_policy.json  environment_sanitizer.py  interceptor.py  limitation_detector.py  models.py  notifier.py  policy.py  runtime_launcher.py  startup_checks.py  storage.py
sdk/agentshield/integrations/: __init__.py  agentshield_tool.py  generic_agent_wrapper.py  langchain_wrapper.py
sdk/agentshield/static/: index.html
sdk/tests/: test_production_features.py  test_release_checks.py  test_security_regression.py
server/: .env.example  README.md  docker-compose.yml
server/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
server/backend/app/: main.py  worker.py
server/backend/app/api/v1/: __init__.py
server/backend/app/api/v1/endpoints/: agents.py  auth.py  bans.py  threats.py  websocket.py
server/backend/app/core/: config.py  database.py  redis.py  security.py
server/backend/app/middleware/: security.py
server/backend/app/models/: models.py
server/backend/app/schemas/: schemas.py
server/backend/app/services/: agent_service.py  ban_service.py  threat_detection_engine.py  threat_service.py
server/backend/app/tests/: test_api.py  test_threat_engine.py
server/backend/migrations/: env.py
server/docs/: DEPLOYMENT.md
server/nginx/: nginx.conf
server/scripts/: init-db.sql
